docs: align design docs with debug-agent fix-ownership, full-trust nREPL, clj-llm catalog
Update core/ and design/ docs to match shipped behavior: debug-agent now
owns permanent fixes (no update-agent handoff), nREPL is deny-list-only
full-trust (grant/scope/drift/audit layers removed), and clj-llm provider
detection is catalog-derived. Refreshes agent record protocol count, tool
rosters, and assorted as-built notes across docs/core and docs/design.